# tsound

firmware/: CMakeLists.txt  visrealm_tools.cmake
firmware/src/: CMakeLists.txt  mpi.old  mpi_io.pio  tsound.c  ymodem.c
firmware/src/audio/: CMakeLists.txt  audio.c  audio.h
firmware/submodules/emu2149/: emu2149.h
hardware/: ay_pico.dch
